--- a/public/binder.css
+++ b/public/binder.css
@@ -241,4 +241,15 @@ h1 {
         text-align: center;
     }
 }
-
+.close-modal-button {
+    background-color: var(--surface-color);
+    color: var(--text-color);
+    border: 1px solid red;
+    border-radius: 8px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    color:red;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.2s;
+}
